--- a/app/src/main/res/layout/activity_contact_search.xml
+++ b/app/src/main/res/layout/activity_contact_search.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/pink"
+        android:background="#e9edc9"
         android:padding="10dp"
         android:minHeight="?attr/actionBarSize"
         android:id="@+id/toolbar">
@@ -18,9 +18,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Search User"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="#403d39"
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/back_btn"/>
@@ -30,7 +30,7 @@
             android:layout_height="32dp"
             android:src="@drawable/back"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:tint="@color/white"
+            app:tint="#403d39"
             android:layout_centerVertical="true"
             android:id="@+id/back_btn"/>
 
@@ -56,6 +56,7 @@
             android:layout_marginBottom="10dp"
             android:layout_toLeftOf="@id/search_user_btn"
             android:background="@drawable/rounded_for_recycle"
+            android:backgroundTint="#fffcf2"
             android:elevation="4dp"
             android:hint="Username"
             android:padding="10dp" />
@@ -73,7 +74,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="4dp"
             android:src="@drawable/search"
-            app:tint="@color/black" />
+            app:tint="#403d39" />
 
     </RelativeLayout>
 
