--- a/app/src/main/res/layout/review_cover.xml
+++ b/app/src/main/res/layout/review_cover.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:background="@drawable/rounded_for_recycle"
+    android:backgroundTint="@color/white"
     android:elevation="2dp">
 
 
