--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#F7D6E0</color>
+    <color name="beige">#fefae0</color>
     <color name="yellow">#ffffb7</color>
     <color name="blue">#56aed7</color>
     <color name="purple">#5B3758</color>
     <color name="darkPink">#C65B7C</color>
-
+    <color name="darkGreen">#283618</color>
+    <color name="lightGreen">#e9edc9</color>
+    <color name="coolLightGreen">#a3b18a</color>
 </resources>
