--- a/app/src/main/res/layout/activity_show_class_result.xml
+++ b/app/src/main/res/layout/activity_show_class_result.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/pink"
+        android:background="#e9edc9"
         android:padding="10dp"
         android:minHeight="?attr/actionBarSize"
         android:id="@+id/main_toolbar">
@@ -23,16 +23,16 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_centerVertical="true"
             android:id="@+id/back_btn"
-            app:tint="@color/white" />
+            app:tint="#403d39" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/back_btn"
             android:text="@string/app_name"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="#403d39"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
 
