--- a/app/src/main/res/layout/contact_cover.xml
+++ b/app/src/main/res/layout/contact_cover.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/rounded_for_recycle"
+    android:backgroundTint="#edede9"
     android:layout_margin="10dp"
     android:elevation="2dp">
     <ImageView
