--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/pink"
+        android:background="#e9edc9"
         android:padding="10dp"
         android:minHeight="?attr/actionBarSize"
         android:id="@+id/main_toolbar">
@@ -20,9 +20,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="#403d39"
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"/>
 
@@ -32,7 +32,7 @@
             android:src="@drawable/search"
             android:layout_alignParentEnd="true"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:tint="@color/black"
+            app:tint="#403d39"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
             android:id="@+id/chat_search_btn"/>
