--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -9,7 +9,7 @@
         android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/pink"
+        android:background="#e9edc9"
         android:minHeight="?attr/actionBarSize"
         android:gravity="center_vertical"
         android:padding="10dp">
@@ -18,8 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:textColor="#403d39"
             android:text="Create Post"
-            android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
 
@@ -27,9 +27,11 @@
             android:id="@+id/upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginEnd="5dp"
             android:textSize="20dp"
             android:text="Post"
-            android:textColor="@color/black"
+            android:textColor="@color/darkGreen"
             android:textStyle="bold"
             android:layout_alignParentEnd="true"/>
 
