--- a/app/src/main/res/layout/post_cover.xml
+++ b/app/src/main/res/layout/post_cover.xml
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/profile_pic_image_view"
-                android:layout_marginStart="8sp"
+                android:textColor="#403d39"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 tools:text="User name" />
