--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -32,6 +32,7 @@
             android:layout_marginTop="112dp"
             android:gravity="center"
             android:text="Tommy Trojan"
+            android:textColor="#403d39"
             android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,7 @@
             android:id="@+id/changeUsername"
             android:layout_width="37dp"
             android:layout_height="37dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="14dp"
             android:clickable="true"
             android:padding="10dp"
             android:src="@drawable/ic_edit"
@@ -91,6 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="ClassList"
+            android:textColor="#403d39"
             android:textSize="20dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -145,8 +147,8 @@
             android:layout_height="30dp"
             android:clickable="true"
             android:focusable="true"
-            android:src="@drawable/baseline_change_circle_24"
-            android:backgroundTint="@color/blue"
+            android:src="@drawable/baseline_refresh_24"
+            android:backgroundTint="@color/coolLightGreen"
             app:fabCustomSize="30dp"
             app:fabSize="auto"
             app:layout_constraintBottom_toBottomOf="@+id/profile_image"
@@ -163,7 +165,7 @@
             android:padding="1dp"
             android:text="Log Out"
             android:textSize="13sp"
-            app:backgroundTint="#F4ABAB"
+            app:backgroundTint="@color/coolLightGreen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.979"
