--- a/app/src/main/res/layout/user_pop_window.xml
+++ b/app/src/main/res/layout/user_pop_window.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:background="@drawable/rounded_pop_window"
-    android:backgroundTint="@color/white"
+    android:backgroundTint="#edede9"
     android:elevation="2dp">
 
     <LinearLayout
