fixed some errors

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -148,7 +148,7 @@
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/baseline_refresh_24"
-            android:backgroundTint="@color/coolLightGreen"
+            android:backgroundTint="@color/lightGreen"
             app:fabCustomSize="30dp"
             app:fabSize="auto"
             app:layout_constraintBottom_toBottomOf="@+id/profile_image"
@@ -165,7 +165,7 @@
             android:padding="1dp"
             android:text="Log Out"
             android:textSize="13sp"
-            app:backgroundTint="@color/coolLightGreen"
+            app:backgroundTint="@color/lightGreen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.979"
