minor appearance updates

--- a/app/src/main/res/drawable/circular.xml
+++ b/app/src/main/res/drawable/circular.xml
@@ -12,5 +12,5 @@ android:useLevel="false" >
 
 <stroke
     android:width="5dp"
-    android:color="#6DFF5722" />
+    android:color="@color/lightGreen" />
 </shape>
