--- a/app/src/main/res/layout/post_cover.xml
+++ b/app/src/main/res/layout/post_cover.xml
@@ -37,6 +37,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="25sp"
                     android:textStyle="bold"
+                    android:fontFamily="sans-serif-condensed-light"
                     tools:text="User name" />
                 <TextView
                     android:layout_below="@id/user_name_text"
