--- a/app/src/main/res/layout/user_pop_window.xml
+++ b/app/src/main/res/layout/user_pop_window.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             >
 
             <ImageView
@@ -41,7 +42,6 @@
                 android:layout_width="100dp"
                 android:layout_centerHorizontal="true"
                 android:layout_height="100dp"
-                android:paddingTop="10dp"
                 android:background="@drawable/circular"
                 android:backgroundTint="@color/white"
                 android:src="@drawable/img" />
@@ -49,7 +49,8 @@
             <TextView
                 android:id="@+id/userName"
                 android:layout_below="@id/profile_image"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
