minor minor change

--- a/app/src/main/res/layout/activity_init_avatar.xml
+++ b/app/src/main/res/layout/activity_init_avatar.xml
@@ -5,6 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".regLogInActivity.Init_avatar">
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="244dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/top_background" />
 
     <ProgressBar
         android:id="@+id/progressBar3"
@@ -38,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.153" />
+        app:layout_constraintVertical_bias="0.32" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_init"
@@ -58,14 +69,16 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_width="272dp"
+        android:layout_height="81dp"
+        android:layout_marginTop="72dp"
         android:fontFamily="sans-serif-black"
+        android:gravity="center"
         android:text="@string/let_s_add_a_profile_picture"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.36"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
