--- a/app/src/main/res/layout/activity_inside_chat.xml
+++ b/app/src/main/res/layout/activity_inside_chat.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/activity_inside_chat"
     tools:context=".chatsActivity.Inside_chat">
 
     <RelativeLayout
@@ -70,7 +71,6 @@
             android:id="@+id/chat_message_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="5"
             android:layout_centerInParent="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
@@ -81,6 +81,7 @@
             android:elevation="4dp"
             android:hint="Write message here"
             android:inputType="textMultiLine"
+            android:maxLines="5"
             android:padding="10dp" />
 
         <ImageButton
