--- a/app/src/main/res/layout/activity_contact_search.xml
+++ b/app/src/main/res/layout/activity_contact_search.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/activity_contact_search"
     tools:context=".chatsActivity.Contact_search">
 
     <RelativeLayout
