--- a/app/src/main/res/layout/class_cover.xml
+++ b/app/src/main/res/layout/class_cover.xml
@@ -8,7 +8,8 @@
     android:layout_margin="10dp"
     android:background="@drawable/rounded_for_recycle"
     android:backgroundTint="#fffcf2"
-    android:elevation="2dp">
+    android:elevation="2dp"
+    android:id="@+id/class1">
 
     <LinearLayout
         android:layout_width="match_parent"
