--- a/app/src/main/res/layout/class_detail_activity.xml
+++ b/app/src/main/res/layout/class_detail_activity.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".chatsActivity.Inside_chat"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/classDetailPage">
 
     <RelativeLayout
         android:layout_width="match_parent"
