--- a/app/src/main/res/layout/post_cover.xml
+++ b/app/src/main/res/layout/post_cover.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:elevation="2dp">
+    android:elevation="2dp"
+    android:id="@+id/postCover">
 
 
 
