--- a/app/src/main/res/layout/user_pop_window.xml
+++ b/app/src/main/res/layout/user_pop_window.xml
@@ -8,7 +8,8 @@
     android:layout_margin="10dp"
     android:background="@drawable/rounded_pop_window"
     android:backgroundTint="#edede9"
-    android:elevation="2dp">
+    android:elevation="2dp"
+    android:id="@+id/userPopup">
 
     <LinearLayout
         android:layout_width="match_parent"
