--- a/app/src/main/res/layout/post_cover.xml
+++ b/app/src/main/res/layout/post_cover.xml
@@ -86,8 +86,8 @@
                     android:id="@+id/likes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0"
-                    android:layout_marginStart="25dp"/>
+                    android:layout_marginStart="25dp"
+                    android:text="0" />
 
                 <View
                     android:id="@+id/divider2"
