--- a/app/src/main/res/layout/review_popup.xml
+++ b/app/src/main/res/layout/review_popup.xml
@@ -7,7 +7,8 @@
     android:padding="10dp"
     android:background="@drawable/rounded_pop_window"
     android:backgroundTint="@color/white"
-    android:elevation="2dp">
+    android:elevation="2dp"
+    android:id="@+id/reviewPage">
 
     <LinearLayout
         android:layout_width="match_parent"
