--- a/app/src/main/res/layout/class_cover.xml
+++ b/app/src/main/res/layout/class_cover.xml
@@ -26,6 +26,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:clickable="true"
+                android:focusable="true"
                 android:background="@android:color/transparent"
                 app:srcCompat="@drawable/baseline_close_24" />
 
