--- a/app/src/main/res/layout/post_cover.xml
+++ b/app/src/main/res/layout/post_cover.xml
@@ -25,6 +25,8 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/circular"
                 android:backgroundTint="@color/white"
@@ -34,15 +36,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/profile_pic_image_view">
+
                 <TextView
-                    android:layout_marginTop="12dp"
                     android:id="@+id/user_name_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:fontFamily="sans-serif-condensed-light"
                     android:textSize="25sp"
                     android:textStyle="bold"
-                    android:fontFamily="sans-serif-condensed-light"
                     tools:text="User name" />
+
                 <TextView
                     android:layout_below="@id/user_name_text"
                     android:id="@+id/dateTime"
@@ -50,7 +54,22 @@
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
                     tools:text="2022/3/28 9:30PM" />
+
+
             </RelativeLayout>
+            <ImageButton
+                android:clickable="true"
+                android:focusable="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:id="@+id/deleteButton"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="30dp"
+                android:background="@android:color/transparent"
+                app:srcCompat="@drawable/baseline_delete_forever_24" />
         </RelativeLayout>
 
         <LinearLayout
@@ -77,6 +96,8 @@
                     android:layout_marginBottom="10dp"
                     android:id="@+id/imageButton"
                     android:layout_marginStart="20dp"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
