--- a/app/src/main/res/layout/user_pop_action_del.xml
+++ b/app/src/main/res/layout/user_pop_action_del.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
@@ -42,20 +40,7 @@
                     android:backgroundTint="@color/coolLightGreen"
                     android:background="@drawable/rounded_for_recycle"
                     android:textColor="@color/white"
-                    android:text="Block" />
-
-                <Button
-                    android:id="@+id/delete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/block"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/rounded_for_recycle"
-                    android:backgroundTint="@color/coolLightGreen"
-                    android:text="Delete"
-                    android:textColor="@color/white" />
+                    android:text="" />
 
             </RelativeLayout>
 
