--- a/app/src/main/res/layout/class_cover.xml
+++ b/app/src/main/res/layout/class_cover.xml
@@ -68,6 +68,22 @@
                 android:layout_marginStart="10dp"
                 android:textSize="15sp"
                 tools:text="Professor:" />
+
+            <TextView
+                android:id="@+id/divider2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textSize="15sp"
+                tools:text="/" />
+
+            <TextView
+                android:id="@+id/rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textSize="15sp"
+                tools:text="Rating:" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
